--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,6 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  
   "dependencies": {
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
@@ -19,6 +18,7 @@
     "react-spinners": "^0.11.0",
     "slick-carousel": "^1.8.1",
     "stars-rating": "^1.1.0",
+    "styled-components": "^4.4.1",
     "sweetalert": "^2.1.2",
     "web-vitals": "^1.1.2"
   },
